# claude-switch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  profile.rs  tests.rs  tui.rs
