[package]
name = "claude-switch"
version = "0.1.0"
edition = "2024"
description = "Multi-account profile manager for Claude Code"

[[bin]]
name = "cswitch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
